--- a/web/public/index.html
+++ b/web/public/index.html
@@ -39,6 +39,7 @@
     <script type="text/javascript" src="./src/components/nav-bar.js"></script>
     <script type="text/javascript" src="./src/components/progress.js"></script>
     <script type="text/javascript" src="./src/components/row.js"></script>
+    <script type="text/javascript" src="./src/components/search-bar.js"></script>
     <script type="text/javascript" src="./src/components/section.js"></script>
     <script type="text/javascript" src="./src/components/stat-card.js"></script>
     <script type="text/javascript" src="./src/components/table.js"></script>
